# lwm2m-protobuf

./: .gitignore  CMakeLists.txt  Makefile  README.md  factory_partition_encode.py  idf_component.yml  lwm2m.options  lwm2m.proto
include/: lwm2m.pb.h  lwm2m_helpers.h
python_out/: lwm2m_pb2.py
src/: lwm2m.pb.c  lwm2m_helpers.c
